# py-tree-sitter

./: .appveyor.yml  .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  Manifest.in  README.md  conanfile.py  mypy.ini  pyproject.toml  reproduce2.py  reproduce3.py  run-tests.profile  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  pr.yml  pypi.yml  release.yml  wheels.yml
docs/: conf.py  index.rst
docs/classes/: tree_sitter.Language.rst  tree_sitter.LogType.rst  tree_sitter.LookaheadIterator.rst  tree_sitter.Node.rst  tree_sitter.Parser.rst  tree_sitter.Point.rst  tree_sitter.Query.rst  tree_sitter.QueryCursor.rst  tree_sitter.QueryError.rst  tree_sitter.QueryPredicate.rst  tree_sitter.Range.rst  tree_sitter.Tree.rst  tree_sitter.TreeCursor.rst
examples/: usage.py  walk_tree.py
script/: fetch-fixtures  fetch-fixtures.cmd  lint  publish  test
tests/: __init__.py  test_language.py  test_lookahead_iterator.py  test_node.py  test_parser.py  test_query.py  test_tree.py  test_tree_sitter.py  test_wasm.py
tests/wasm/: tree-sitter-javascript.wasm
tree_sitter/: __init__.py  __init__.pyi  _binding.pyi  binding.c  binding.pyi  setuptools.py  visitor.py
tree_sitter/binding/: docs.h  language.c  language.h  lookahead_iterator.c  lookahead_iterator.h  lookahead_names_iterator.c  lookahead_names_iterator.h  lookahead_symbols_iterator.c  module.c  node.c  node.h  parser.c  parser.h  point.c  point.h  query.c  query.h  query_cursor.c  query_predicates.c  range.c  range.h  tree.c  tree.h  tree_cursor.c  tree_cursor.h  types.h  wasmtime.c  wasmtime_symbols.txt
