[project]
name = "tree-sitter"
version = "0.25.2"
description = "Python bindings to the Tree-sitter parsing library"
keywords = ["incremental", "parsing", "tree-sitter"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Homepage = "https://tree-sitter.github.io/tree-sitter/"
Source = "https://github.com/tree-sitter/py-tree-sitter"
Documentation = "https://tree-sitter.github.io/py-tree-sitter/"
Discord = "https://discord.gg/w7nTvsVJhm"
Matrix = "https://matrix.to/#/#tree-sitter-chat:matrix.org"

[[project.authors]]
name = "Max Brunsfeld"
email = "maxbrunsfeld@gmail.com"

[[project.maintainers]]
name = "ObserverOfTime"
email = "chronobserver@disroot.org"

[project.optional-dependencies]
docs = ["sphinx~=8.2", "sphinx-book-theme"]
tests = [
    "tree-sitter-html==0.23.2",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-json==0.24.8",
    "tree-sitter-python==0.25.0",
    "tree-sitter-rust==0.24.0",
]

[build-system]
requires = ["setuptools>=43"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4
extend-exclude = [
    ".github",
    "__pycache__",
    "setup.py",
    "tree_sitter/core",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.cibuildwheel]
build-frontend = "build"
test-extras = ["tests"]
test-command = "python -munittest discover -s {project}/tests -v"

[tool.mypy]
exclude = ["tree_sitter/core"]

[tool.rstcheck]
ignore_directives = [
    "autoclass",
    "autodata",
    "automethod",
    "autosummary"
]
